tests/unit-fail-compilation/incompatible-compare.c.ref
incompatible-compare.c:5:3: error: Incompatible types in relational expression.
  Constraint violation (CV-CERL5). See C11 sec. 6.5.8:2
Translation failed (config dumped). Run kcc -d incompatible-compare.c to see commands run.
